<resources>
    <string name="app_name">RxUsa</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="ratification_hint">9 of 13 states must ratify before you sign the constitution</string>
    <string name="ratify_delaware">Delaware</string>
    <string name="ratify_pennsylvania">Pennsylvania</string>
    <string name="ratify_new_jersey">New Jersey</string>
    <string name="ratify_georgia">Georgia</string>
    <string name="ratify_connecticut">Connecticut</string>
    <string name="ratify_massachusetts">Massachusetts</string>
    <string name="ratify_maryland">Maryland</string>
    <string name="ratify_south_carolina">South Carolina</string>
    <string name="ratify_new_hampshire"> New Hampshire</string>
    <string name="ratify_virginia">Virginia</string>
    <string name="ratify_new_york">New York</string>
    <string name="ratify_north_carolina">North Carolina</string>
    <string name="ratify_rhode_island">Rhode Island</string>

    <string name="ratify">Sign US Constitution</string>

    <string name="legislative">Legislative</string>
    <string name="executive">Executive</string>
    <string name="judicial">Judicial</string>
    <string name="media">Media</string>
    <string name="propose_law">Propose Bill</string>
    <string name="veto">Veto</string>
    <string name="sign">Sign</string>
    <string name="override">Override Veto</string>
    <string name="kill">Kill</string>
    <string name="invalidate">Invalidate</string>

    <string name="legislative_instructions">After Congress proposes a Bill, it\'s up to the Executive branch to sign the Bill into law.</string>
    <string name="legislative_override_instructions">If the Executive branch vetos a Bill, Congress can override the veto with a 2/3 majority vote. Here is a list of Bills the President has vetoed:</string>
    <string name="judicial_instructions">The Supreme Court has the power to review and invalidate Laws:</string>

    <!-- Executive Screen -->
    <string name="executive_action_list_empty_message">Currently, there are no Bills to approve or veto.</string>

</resources>
