<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.ehmer.usa.login.LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="72dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Switch
                            android:id="@+id/ratify_delaware"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_delaware" />


                        <Switch
                            android:id="@+id/ratify_pennsylvania"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_pennsylvania" />

                        <Switch
                            android:id="@+id/ratify_new_jersey"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_new_jersey" />

                        <Switch
                            android:id="@+id/ratify_georgia"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_georgia" />

                        <Switch
                            android:id="@+id/ratify_connecticut"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_connecticut" />

                        <Switch
                            android:id="@+id/ratify_massachusetts"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_massachusetts" />

                        <Switch
                            android:id="@+id/ratify_maryland"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_maryland" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Switch
                            android:id="@+id/ratify_south_carolina"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_south_carolina" />

                        <Switch
                            android:id="@+id/ratify_new_hampshire"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_new_hampshire" />

                        <Switch
                            android:id="@+id/ratify_virginia"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_virginia" />

                        <Switch
                            android:id="@+id/ratify_new_york"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_new_york" />

                        <Switch
                            android:id="@+id/ratify_north_carolina"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_north_carolina" />

                        <Switch
                            android:id="@+id/ratify_rhode_island"
                            style="@style/RatificationSwitch"
                            android:text="@string/ratify_rhode_island" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/sign_ratification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/ratify" />
            </LinearLayout>


        </ScrollView>
    </LinearLayout>
</layout>
