<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_legistative"
        android:enabled="true"
        android:icon="@drawable/ic_legislative_black_24dp"
        android:title="@string/legislative"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_executive"
        android:enabled="true"
        android:icon="@drawable/ic_executive_black_24dp"
        android:title="@string/executive"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_judicial"
        android:enabled="true"
        android:icon="@drawable/ic_judicial_black_24dp"
        android:title="@string/judicial"
        app:showAsAction="ifRoom" />

    <!--<item-->
        <!--android:id="@+id/action_media"-->
        <!--android:enabled="true"-->
        <!--android:icon="@drawable/ic_media_black_24dp"-->
        <!--android:title="@string/media"-->
        <!--app:showAsAction="ifRoom" />-->


</menu>